Update css for shifting left menu

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* OVERWRITE */
-.channel_header_refresh:not(.loading) #client-ui, #quick_switcher_btn {
+#client-ui, #quick_switcher_btn {
     left: 50px!important;
 }
 
